--- a/links.html
+++ b/links.html
@@ -236,8 +236,9 @@
 
     <footer>
         <p>© 2025 Dr. Nirmal Lamichhane.</p>
-        <p>Managed by Bimal Pharmacy</p>
+        <p>Managed by BLy</p>
     </footer>
 
 </body>
 </html>
+
