--- a/links.html
+++ b/links.html
@@ -330,7 +330,7 @@
 
     <footer>
         <p>© 2025 Dr. Nirmal Lamichhane.</p>
-        <p>Managed by Bimal Pharmacy</p>
+        <p>Managed by BL </p>
     </footer>
 
     <div class="chat-window" id="chat-window">
@@ -465,3 +465,4 @@
 
 </body>
 </html>
+
