--- a/index.html
+++ b/index.html
@@ -565,6 +565,7 @@
         </div>
         <p>&copy; 2025 Dr. Nirmal Lamichhane. All Rights Reserved.</p>
         <p style="font-size: 0.9rem; margin-top: 5px;" data-key="footer_sub">Senior Consultant Surgeon | BPKMCH</p>
+         <p>Managed by BL </p>
     </footer>
 
     <script>
@@ -837,5 +838,6 @@
     </script>
 </body>
 </html>
+
 
 
