--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+
+
+<head>
+  <title>Dr. Nirmal - [Your Professional Title/Service]</title>
+  <meta name="description" content="Brief description of what this page offers. Keep it under 160 characters.">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://www.drnirmal.com.np/" />
+</head>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
