--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dr. Nirmal Lamichhane | Senior Consultant Surgeon</title>
     
+    <link rel="stylesheet" href="style.css">
+
+    <link href="https://fonts.googleapis.com/css2?family=Lato..." rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+</head>
+
     <title>Dr. Nirmal Lamichhane | Senior Consultant Surgeon & Uro-Oncologist</title>
     <meta name="description" content="Official portfolio of Dr. Nirmal Lamichhane, Senior Consultant Surgeon specializing in Uro-Oncology, Prostate, and Bladder cancer at BPKMCH, Bharatpur, Nepal.">
     <meta name="keywords" content="Dr. Nirmal Lamichhane, Surgeon Nepal, BPKMCH, Uro-oncology Bharatpur, Prostate surgery Nepal, Bladder cancer specialist Nepal">
