--- a/links.html
+++ b/links.html
@@ -165,9 +165,9 @@
         <div class="chat-auth" id="chat-auth">
             <p id="auth-info" style="color:#666; text-align:center;">Please enter details to start chatting.</p>
             <label class="auth-label" id="label-name">Your Name</label>
-            <input type="text" id="client-name" class="auth-input" placeholder="Ram Sharma">
+            <input type="text" id="client-name" class="auth-input" placeholder="       ">
             <label class="auth-label" id="label-phone">Mobile Number</label>
-            <input type="tel" id="client-phone" class="auth-input" placeholder="9841XXXXXX">
+            <input type="tel" id="client-phone" class="auth-input" placeholder="XXXXXXXXX">
             <button class="auth-btn" id="start-btn" onclick="startChat()">Start Chatting</button>
         </div>
 
@@ -268,3 +268,4 @@
     </script>
 </body>
 </html>
+
