--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,7 @@
         .icon { font-size: 2rem; color: var(--accent); margin-bottom: 15px; }
         .detail { font-size: 1.1rem; margin-bottom: 30px; }
         h1 { color: var(--primary); font-family: 'Montserrat', sans-serif; }
+        .hospital-box { background: #f0f8ff; padding: 20px; border-radius: 8px; margin-bottom: 20px; border-left: 5px solid var(--primary); display: inline-block; width: 100%; max-width: 600px; text-align: left; }
     </style>
 </head>
 <body>
@@ -40,29 +41,26 @@
     <div class="info-card">
         <h1>Get in Touch</h1>
         
-        <div class="icon"><i class="fas fa-map-marker-alt"></i></div>
-        <p class="detail">
-            <strong>Department of Surgical Oncology</strong><br>
-            B. P. Koirala Memorial Cancer Hospital<br>
-            P. O. Box: 34, Bharatpur Municipality<br>
-            [cite_start]Chitwan, Nepal [cite: 5-8]
-        </p>
+        <div class="icon"><i class="fas fa-hospital-user"></i></div>
+        
+        <div class="hospital-box">
+            <h3 style="color:var(--primary); margin-top:0;">National City Hospital</h3>
+            <p style="margin: 5px 0;"><strong>Medical Director & Consultant Surgeon</strong></p>
+            <p><i class="fas fa-map-marker-alt" style="color:var(--accent); width:20px;"></i> Hospital Road, Bharatpur-10, Chitwan</p>
+            <p><i class="fas fa-phone" style="color:var(--accent); width:20px;"></i> <strong>056-493511</strong> (For Inquiries)</p>
+            <p><i class="fas fa-clock" style="color:var(--accent); width:20px;"></i> <strong>Hours:</strong> Open 24 Hours</p>
+        </div>
 
-        <div class="icon"><i class="fas fa-phone"></i></div>
-        <p class="detail">
-            [cite_start]<strong>Mobile:</strong> 9855046811 [cite: 9]<br>
-            <span style="font-size:0.9rem; color:#666;">(Please call during office hours)</span>
-        </p>
-
-        <div class="icon"><i class="fas fa-envelope"></i></div>
-        <p class="detail">
-            [cite_start]<strong>Email:</strong> nirmal.lamichhane@gmail.com [cite: 10]
-        </p>
+        <div class="hospital-box" style="background: #fffbf0; border-left-color: var(--accent);">
+            <h3 style="color:var(--primary); margin-top:0;">B. P. Koirala Memorial Cancer Hospital</h3>
+            <p style="margin: 5px 0;"><strong>Department of Surgical Oncology</strong></p>
+            <p><i class="fas fa-map-marker-alt" style="color:var(--accent); width:20px;"></i> P. O. Box: 34, Bharatpur Municipality, Chitwan</p>
+        </div>
 
         <div style="margin-top: 40px; padding-top: 20px; border-top: 1px solid #eee;">
             <p style="font-size: 0.9rem;">
-                [cite_start]<strong>Nepal Medical Council:</strong> 3261 [cite: 14]<br>
-                [cite_start]<strong>General Medical Council (UK):</strong> 7059752 [cite: 15]
+                <strong>Nepal Medical Council:</strong> 3261<br>
+                <strong>General Medical Council (UK):</strong> 7059752
             </p>
         </div>
     </div>
