--- a/links.html
+++ b/links.html
@@ -28,31 +28,27 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+        }
+
+        /* --- NAVIGATION BAR (Added to match other pages) --- */
+        header { background: #fff; padding: 15px 20px; box-shadow: 0 2px 10px rgba(0,0,0,0.08); position: sticky; top: 0; z-index: 1000; width: 100%; }
+        .nav-box { max-width: 1100px; margin: 0 auto; display: flex; justify-content: space-between; align-items: center; }
+        .nav-links a { color: #555; margin-left: 20px; text-decoration: none; font-weight: 600; font-size: 0.95rem; }
+        .nav-links a:hover, .nav-links a.active { color: var(--primary); }
+        .mobile-menu { display: none; } /* Hide on desktop */
+
+        /* --- MAIN CONTENT CENTERED --- */
+        .main-content {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
             align-items: center;
             padding: 40px 20px;
-            position: relative;
+            width: 100%;
         }
-        /* --- TOP BACK BUTTON (Absolute) --- */
-        .back-home-btn {
-            position: absolute; top: 20px; left: 20px; text-decoration: none;
-            color: var(--text-dark); font-weight: 700; display: flex; align-items: center;
-            gap: 8px; background: rgba(255, 255, 255, 0.9); padding: 8px 15px;
-            border-radius: 30px; font-size: 0.9rem; box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-            transition: transform 0.2s, color 0.2s; border: 1px solid #ddd; z-index: 10;
-        }
-        .back-home-btn:hover { transform: translateX(-3px); color: var(--primary); background: #fff; }
-
-        /* --- BOTTOM BACK BUTTON (Relative) --- */
-        .footer-back-btn {
-            margin-top: 30px; display: inline-flex; align-items: center; gap: 10px;
-            text-decoration: none; color: #555; background: #fff; padding: 10px 25px;
-            border-radius: 30px; font-weight: 600; border: 1px solid #ddd; transition: 0.3s;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-        }
-        .footer-back-btn:hover { background: var(--primary); color: white; border-color: var(--primary); transform: translateY(-2px); }
 
         /* --- PROFILE --- */
-        .profile-container { text-align: center; margin-bottom: 30px; margin-top: 20px; animation: fadeInDown 0.8s ease-out; }
+        .profile-container { text-align: center; margin-bottom: 30px; animation: fadeInDown 0.8s ease-out; }
         .profile-img { width: 120px; height: 120px; border-radius: 50%; border: 4px solid var(--primary); object-fit: cover; box-shadow: 0 8px 15px rgba(0,0,0,0.1); margin-bottom: 15px; }
         .name { font-family: 'Montserrat', sans-serif; font-size: 1.4rem; font-weight: 700; color: var(--primary-dark); margin-bottom: 5px; }
         .title { font-size: 0.95rem; color: #555; background: #fff; padding: 5px 15px; border-radius: 20px; display: inline-block; box-shadow: 0 2px 5px rgba(0,0,0,0.05); }
@@ -79,13 +75,13 @@
         .social-icon { width: 45px; height: 45px; border-radius: 50%; background: #fff; display: flex; align-items: center; justify-content: center; color: #555; font-size: 1.2rem; box-shadow: 0 4px 6px rgba(0,0,0,0.1); transition: 0.3s; }
         .social-icon:hover { transform: scale(1.1); color: var(--primary); }
 
-        footer { margin-top: 20px; padding-top: 20px; text-align: center; font-size: 0.8rem; color: #777; }
+        footer { margin-top: 20px; padding-top: 20px; text-align: center; font-size: 0.8rem; color: #777; width: 100%; }
 
         /* --- AI CHATBOT WINDOW STYLES --- */
         .chat-window {
             position: fixed; bottom: 20px; right: 20px; width: 350px; height: 480px;
             background: var(--chat-bg); border-radius: 15px; box-shadow: 0 5px 30px rgba(0,0,0,0.3);
-            display: none; flex-direction: column; overflow: hidden; z-index: 1000; border: 1px solid #ddd; animation: fadeInUp 0.3s ease-out;
+            display: none; flex-direction: column; overflow: hidden; z-index: 2000; border: 1px solid #ddd; animation: fadeInUp 0.3s ease-out;
         }
         @media (max-width: 500px) { .chat-window { right: 50%; transform: translateX(50%); width: 90%; bottom: 20px; } }
 
@@ -117,39 +113,56 @@
 
         @keyframes fadeInDown { from { opacity: 0; transform: translateY(-20px); } to { opacity: 1; transform: translateY(0); } }
         @keyframes fadeInUp { from { opacity: 0; transform: translateY(20px); } to { opacity: 1; transform: translateY(0); } }
+
+        @media (max-width: 768px) {
+            .nav-links { display: none; } /* Simplified mobile nav handling */
+        }
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-home-btn"><i class="fas fa-arrow-left"></i> Home</a>
 
-    <div class="profile-container">
-        <img src="profile.png" alt="Dr. Nirmal Lamichhane" class="profile-img">
-        <h1 class="name">Dr. Nirmal Lamichhane</h1>
-        <div class="title">Senior Consultant Surgeon</div>
-        <p style="font-size: 0.9rem; color: #666; margin-top: 8px;">Uro-Oncology Specialist | BPKMCH</p>
+    <header>
+        <div class="nav-box">
+            <h2 style="margin:0; font-size:1.3rem; color:var(--primary); font-family:'Montserrat', sans-serif;">Dr. Nirmal Lamichhane</h2>
+            <nav class="nav-links">
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="services.html">Services</a>
+                <a href="appointment.html">Appointment</a>
+                <a href="links.html" class="active">Links</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <div class="main-content">
+        <div class="profile-container">
+            <img src="profile.png" alt="Dr. Nirmal Lamichhane" class="profile-img">
+            <h1 class="name">Dr. Nirmal Lamichhane</h1>
+            <div class="title">Senior Consultant Surgeon</div>
+            <p style="font-size: 0.9rem; color: #666; margin-top: 8px;">Uro-Oncology Specialist | BPKMCH</p>
+        </div>
+
+        <div class="links-container">
+            <a href="index.html" class="link-btn btn-website"><i class="fas fa-globe"></i> Visit Official Portfolio</a>
+            <button onclick="toggleChat()" class="link-btn btn-ai"><i class="fas fa-robot"></i> AI Assistant</button>
+            <a href="tel:056493511" class="link-btn btn-clinic"><span>Call Clinic (National City Hospital)</span><i class="fas fa-phone-alt"></i></a>
+            <a href="mailto:nirmal.lamichhane@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
+            <a href="#" class="link-btn"><i class="fas fa-graduation-cap" style="color:#4285F4;"></i> Research & Publications</a>
+            <a href="https://maps.google.com/?q=B.P.+Koirala+Memorial+Cancer+Hospital" target="_blank" class="link-btn"><i class="fas fa-map-marker-alt" style="color:#ea4335;"></i> Find Hospital Location</a>
+        </div>
+
+        <div class="social-row">
+            <a href="#" class="social-icon" title="Facebook"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="social-icon" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#" class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
+        </div>
+
+        <footer>
+            <p>© 2025 Dr. Nirmal Lamichhane.</p>
+            <p>Design by BL </p>
+        </footer>
     </div>
-
-    <div class="links-container">
-        <a href="index.html" class="link-btn btn-website"><i class="fas fa-globe"></i> Visit Official Portfolio</a>
-        <button onclick="toggleChat()" class="link-btn btn-ai"><i class="fas fa-robot"></i> AI Assistant</button>
-        <a href="tel:056493511" class="link-btn btn-clinic"><span>Call Clinic (National City Hospital)</span><i class="fas fa-phone-alt"></i></a>
-        <a href="mailto:nirmal.lamichhane@gmail.com" class="link-btn"><i class="fas fa-envelope"></i> Send an Email</a>
-        <a href="#" class="link-btn"><i class="fas fa-graduation-cap" style="color:#4285F4;"></i> Research & Publications</a>
-        <a href="https://maps.google.com/?q=B.P.+Koirala+Memorial+Cancer+Hospital" target="_blank" class="link-btn"><i class="fas fa-map-marker-alt" style="color:#ea4335;"></i> Find Hospital Location</a>
-    </div>
-
-    <div class="social-row">
-        <a href="#" class="social-icon" title="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="#" class="social-icon" title="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#" class="social-icon" title="Twitter"><i class="fab fa-twitter"></i></a>
-    </div>
-
-    <a href="index.html" class="footer-back-btn"><i class="fas fa-arrow-left"></i> Back to Main Website</a>
-
-    <footer>
-        <p>© 2025 Dr. Nirmal Lamichhane.</p>
-        <p>Design by BL </p>
-    </footer>
 
     <div class="chat-window" id="chat-window">
         <div class="chat-header">
@@ -165,7 +178,7 @@
         <div class="chat-auth" id="chat-auth">
             <p id="auth-info" style="color:#666; text-align:center;">Please enter details to start chatting.</p>
             <label class="auth-label" id="label-name">Your Name</label>
-            <input type="text" id="client-name" class="auth-input" placeholder="       ">
+            <input type="text" id="client-name" class="auth-input" placeholder="        ">
             <label class="auth-label" id="label-phone">Mobile Number</label>
             <input type="tel" id="client-phone" class="auth-input" placeholder="XXXXXXXXX">
             <button class="auth-btn" id="start-btn" onclick="startChat()">Start Chatting</button>
@@ -187,7 +200,6 @@
             document.getElementById('en-btn').classList.toggle('active', lang === 'en');
             document.getElementById('ne-btn').classList.toggle('active', lang === 'ne');
             
-            // Update Auth UI Language
             if(lang === 'ne') {
                 document.getElementById('auth-info').innerText = "कुराकानी सुरु गर्न आफ्नो विवरण भर्नुहोस्।";
                 document.getElementById('label-name').innerText = "तपाईंको नाम";
@@ -268,4 +280,3 @@
     </script>
 </body>
 </html>
-
