--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
         
         <div class="hospital-box">
             <h3 style="color:var(--primary); margin-top:0;">National City Hospital</h3>
-            <p style="margin: 5px 0;"><strong>Medical Director & Consultant Surgeon</strong></p>
+            <p style="margin: 5px 0;"><strong> Consultant Surgeon</strong></p>
             <p><i class="fas fa-map-marker-alt" style="color:var(--accent); width:20px;"></i> Hospital Road, Bharatpur-10, Chitwan</p>
             <p><i class="fas fa-phone" style="color:var(--accent); width:20px;"></i> <strong>056-493511</strong> (For Inquiries)</p>
             <p><i class="fas fa-clock" style="color:var(--accent); width:20px;"></i> <strong>Hours:</strong> Open 24 Hours</p>
