--- a/services.html
+++ b/services.html
@@ -22,7 +22,7 @@
         .container { max-width: 1000px; margin: 50px auto; padding: 0 20px; }
         .section-header { text-align: center; margin-bottom: 50px; }
         .section-header h1 { color: var(--primary); font-family: 'Montserrat', sans-serif; font-size: 2.2rem; margin-bottom: 10px; }
-        .section-header p { color: #666; max-width: 600px; margin: 0 auto; }
+        .section-header p { color: #666; max-width: 600px; margin: 0 auto; font-size: 1.1rem; }
 
         /* Service Cards */
         .service-grid { display: grid; grid-template-columns: 1fr; gap: 30px; }
@@ -33,7 +33,7 @@
         h3 i { color: var(--accent); }
         
         ul { padding-left: 20px; margin-top: 15px; }
-        li { margin-bottom: 8px; color: #555; }
+        li { margin-bottom: 12px; color: #555; }
         strong { color: var(--primary); }
 
         @media (min-width: 768px) {
@@ -61,7 +61,7 @@
 <main class="container">
     <div class="section-header">
         <h1>Clinical Expertise & Procedures</h1>
-        [cite_start]<p>Comprehensive surgical solutions for urological malignancies and complex pelvic conditions, backed by over two decades of experience[cite: 42].</p>
+        <p>Comprehensive surgical solutions for urological malignancies and complex pelvic conditions, backed by over two decades of experience.</p>
     </div>
 
     <div class="service-grid">
@@ -69,12 +69,12 @@
         <div class="service-card full-width">
             <h3><i class="fas fa-procedures"></i> Urological Oncology</h3>
             <p>
-                Dr. Lamichhane specializes in the surgical management of genito-urinary tract tumors. His primary focus is on delivering curative outcomes while preserving quality of life through advanced reconstruction techniques.
+                Dr. Lamichhane specializes in the surgical management of genito-urinary tract tumors. His primary focus is on delivering curative outcomes while preserving quality of life through advanced reconstruction techniques. He combines rigorous oncological principles with meticulous surgical skill to treat various malignancies.
             </p>
             <ul>
-                <li><strong>Bladder Cancer:</strong> Expertise in Radical Cystectomy. [cite_start]Dr. Nirmal has a special interest in the "Studer Pouch" (Orthotopic Neobladder), a complex procedure that constructs a new bladder from the intestine, allowing patients to urinate normally[cite: 53, 125].</li>
-                [cite_start]<li><strong>Prostate Cancer:</strong> Performing Radical Prostatectomy for high-risk cases and managing active surveillance protocols for early-stage disease[cite: 53].</li>
-                [cite_start]<li><strong>Penile & Testicular Cancer:</strong> Surgical management including partial or total penectomy and meticulous groin lymph node dissections[cite: 54, 131].</li>
+                <li><strong>Bladder Cancer:</strong> Expertise in Radical Cystectomy. Dr. Nirmal has a special interest in the "Studer Pouch" (Orthotopic Neobladder), a complex procedure that constructs a new bladder from the intestine, allowing patients to urinate normally.</li>
+                <li><strong>Prostate Cancer:</strong> Performing Radical Prostatectomy for high-risk cases and managing active surveillance protocols for early-stage disease to minimize overtreatment while ensuring safety.</li>
+                <li><strong>Penile & Testicular Cancer:</strong> Surgical management including partial or total penectomy and meticulous groin lymph node dissections to ensure complete cancer removal.</li>
             </ul>
         </div>
 
@@ -84,20 +84,20 @@
                 Utilizing minimally invasive technology to treat urinary tract conditions without open incisions. These procedures offer faster recovery times and reduced hospital stays.
             </p>
             <ul>
-                [cite_start]<li><strong>TURP (Transurethral Resection of the Prostate):</strong> The gold standard treatment for benign prostate enlargement (BPH)[cite: 53].</li>
-                [cite_start]<li><strong>TURBT:</strong> Endoscopic removal of bladder tumors for both diagnosis and staging of bladder cancer[cite: 53].</li>
+                <li><strong>TURP (Transurethral Resection of the Prostate):</strong> The gold standard treatment for benign prostate enlargement (BPH), relieving urinary obstruction.</li>
+                <li><strong>TURBT:</strong> Endoscopic removal of bladder tumors for both accurate diagnosis and staging of bladder cancer before definitive treatment.</li>
             </ul>
         </div>
 
         <div class="service-card">
             <h3><i class="fas fa-user-md"></i> Complex Reconstruction</h3>
             <p>
-                [cite_start]Leveraging his fellowship training in Colorectal Surgery from the UK[cite: 39], Dr. Lamichhane performs complex pelvic surgeries that often require multi-organ resection.
+                Leveraging his fellowship training in Colorectal Surgery from the UK, Dr. Lamichhane performs complex pelvic surgeries that often require multi-organ resection.
             </p>
             <ul>
-                [cite_start]<li><strong>Colorectal Surgery:</strong> Management of advanced rectal cancers and colectomies[cite: 54].</li>
-                [cite_start]<li><strong>Breast Oncology:</strong> Experienced in Sentinel Lymph Node Biopsy using dye-guided methods for breast cancer staging[cite: 33].</li>
-                [cite_start]<li><strong>Multidisciplinary Care:</strong> Active involvement in Tumor Board meetings to determine the best treatment path for complex cases[cite: 55].</li>
+                <li><strong>Colorectal Surgery:</strong> Management of advanced rectal cancers and colectomies for patients with synchronous tumors or extensive disease.</li>
+                <li><strong>Breast Oncology:</strong> Experienced in Sentinel Lymph Node Biopsy using dye-guided methods for precise breast cancer staging.</li>
+                <li><strong>Multidisciplinary Care:</strong> Active involvement in Tumor Board meetings to determine the best treatment path for difficult cases.</li>
             </ul>
         </div>
 
