--- a/services.html
+++ b/services.html
@@ -104,7 +104,7 @@
         <div class="nav-container">
             <div class="brand">
                 <h1 data-key="header_name">Dr. Nirmal Lamichhane</h1>
-                <span data-key="header_title">Chairman & Senior Consultant</span>
+                <span data-key="header_title">Senior Consultant</span>
             </div>
             
             <div class="nav-right">
@@ -210,7 +210,7 @@
             },
             ne: {
                 header_name: "डा. निर्मल लामिछाने",
-                header_title: "अध्यक्ष तथा वरिष्ठ कन्सल्टेन्ट",
+                header_title: "वरिष्ठ कन्सल्टेन्ट",
                 nav_home: "गृहपृष्ठ", nav_about: "बारेमा", nav_services: "सेवाहरू", nav_appt: "अपोइन्टमेन्ट", nav_links: "लिङ्कहरू", nav_contact: "सम्पर्क",
                 footer_loc: "भरतपुर, चितवन, नेपाल",
                 
