--- a/about.html
+++ b/about.html
@@ -30,7 +30,6 @@
         ul { padding-left: 20px; } 
         li { margin-bottom: 10px; color: #555; }
         
-        /* Highlight text */
         strong { color: var(--primary); }
     </style>
 </head>
@@ -48,7 +47,7 @@
                 <a href="links.html" data-key="nav_links">Links</a>
                 <a href="contact.html" data-key="nav_contact">Contact</a>
             </nav>
-            <button class="lang-btn" onclick="toggleLang()">EN/NE</button>
+            <button class="lang-btn" onclick="toggleLang()">EN/ने</button>
         </div>
     </div>
 </header>
@@ -64,7 +63,7 @@
     <div class="card">
         <h2 data-key="career_title">Professional Leadership & Experience</h2>
         <p data-key="career_text">
-            His professional timeline is deeply rooted in the B.P. Koirala Memorial Cancer Hospital (BPKMCH). Joining as a Registrar in 2002, he ascended through the ranks to Junior Consultant and eventually Senior Consultant Surgeon. His leadership capabilities were recognized as he served as Deputy Director from 2018 to 2020. Currently, he holds the prestigious position of <strong>Chairman of the Board of Directors</strong>, guiding the hospital's strategic vision. Additionally, he shared his knowledge as an Assistant Professor at the College of Medical Sciences (2012-2016), mentoring the next generation of surgeons.
+            His professional timeline is deeply rooted in the B.P. Koirala Memorial Cancer Hospital (BPKMCH). Joining as a Registrar in 2002, he ascended through the ranks to Junior Consultant and eventually Senior Consultant Surgeon. Dr. Lamichhane has held significant leadership responsibilities, notably serving as the Deputy Director from 2018 to 2020 and later as the <strong>Former Chairman of the Board of Directors</strong>. His vision helped shape the strategic growth of the institution. Additionally, he shared his extensive expertise as an Assistant Professor at the College of Medical Sciences (2012-2016).
         </p>
     </div>
 
@@ -81,7 +80,7 @@
     <div class="card">
         <h2 data-key="mem_title">Memberships & Affiliations</h2>
         <p data-key="mem_text">
-            Dr. Lamichhane is an active leader in the medical community. He is a Life Member of the Nepal Medical Association and the SAARC Federation of Oncologists. On the global stage, he maintains membership with the International Union Against Cancer (UICC) and the American Society of Clinical Oncology (ASCO), ensuring he stays updated with the latest advancements in cancer research.
+            Dr. Lamichhane is an active leader in the medical community. He is a Life Member of the Nepal Medical Association and the SAARC Federation of Oncologists. On the global stage, he maintains membership with the International Union Against Cancer (UICC) and the American Society of Clinical Oncology (ASCO), ensuring he stays updated with the latest advancements in cancer research and surgical innovation.
         </p>
     </div>
 </main>
@@ -95,24 +94,24 @@
             about_title: "A Lifetime Dedicated to Oncology",
             about_intro: "Dr. Nirmal Lamichhane is a distinguished figure in the field of Nepalese oncology. His medical journey began with a Bachelor of Medicine and Bachelor of Surgery (MBBS) from Shanghai Medical University in 1998. Driven by a passion for cancer care, he pursued a Master of Medicine in Clinical Oncology from Fudan University (2001) and later specialized further with a Magister Chirurgiae (M.Ch) in Urology from Kathmandu University in 2016. This robust academic foundation has enabled him to treat complex malignancies with precision and compassion.",
             career_title: "Professional Leadership & Experience",
-            career_text: "His professional timeline is deeply rooted in the B.P. Koirala Memorial Cancer Hospital (BPKMCH). Joining as a Registrar in 2002, he ascended through the ranks to Junior Consultant and eventually Senior Consultant Surgeon. His leadership capabilities were recognized as he served as Deputy Director from 2018 to 2020. Currently, he holds the prestigious position of <strong>Chairman of the Board of Directors</strong>, guiding the hospital's strategic vision. Additionally, he shared his knowledge as an Assistant Professor at the College of Medical Sciences (2012-2016), mentoring the next generation of surgeons.",
+            career_text: "His professional timeline is deeply rooted in the B.P. Koirala Memorial Cancer Hospital (BPKMCH). Joining as a Registrar in 2002, he ascended through the ranks to Junior Consultant and eventually Senior Consultant Surgeon. Dr. Lamichhane has held significant leadership responsibilities, notably serving as the Deputy Director from 2018 to 2020 and later as the <strong>Former Chairman of the Board of Directors</strong>. His vision helped shape the strategic growth of the institution. Additionally, he shared his extensive expertise as an Assistant Professor at the College of Medical Sciences (2012-2016).",
             fel_title: "Global Training & Fellowships",
             fel_intro: "To bring world-class surgical techniques to Nepal, Dr. Lamichhane has completed extensive international training:",
             fel_list_html: "<li><strong>USA (2006):</strong> Completed the prestigious Saudavar Fellowship in Surgical Oncology at Memorial Sloan Kettering Cancer Center (New York).</li><li><strong>USA (2003):</strong> Specialized training in Sentinel Lymph Node Biopsy at the H. Lee Moffitt Cancer Center (Florida).</li><li><strong>UK (2010):</strong> Fellowship in Colorectal Surgical Oncology sponsored by the Royal College of Surgeons of Edinburgh.</li>",
             mem_title: "Memberships & Affiliations",
-            mem_text: "Dr. Lamichhane is an active leader in the medical community. He is a Life Member of the Nepal Medical Association and the SAARC Federation of Oncologists. On the global stage, he maintains membership with the International Union Against Cancer (UICC) and the American Society of Clinical Oncology (ASCO), ensuring he stays updated with the latest advancements in cancer research."
+            mem_text: "Dr. Lamichhane is an active leader in the medical community. He is a Life Member of the Nepal Medical Association and the SAARC Federation of Oncologists. On the global stage, he maintains membership with the International Union Against Cancer (UICC) and the American Society of Clinical Oncology (ASCO), ensuring he stays updated with the latest advancements in cancer research and surgical innovation."
         },
         ne: {
             nav_home: "गृहपृष्ठ", nav_about: "बारेमा", nav_services: "सेवाहरू", nav_appt: "अपोइन्टमेन्ट", nav_links: "लिङ्कहरू", nav_contact: "सम्पर्क",
             about_title: "अंकोलोजीमा समर्पित जीवन",
             about_intro: "डा. निर्मल लामिछाने नेपाली अंकोलोजी क्षेत्रका एक विशिष्ट व्यक्तित्व हुनुहुन्छ। उहाँको चिकित्सा यात्रा सन् १९९८ मा साङ्घाई मेडिकल युनिभर्सिटीबाट MBBS गरेर सुरु भयो। क्यान्सर उपचारप्रतिको लगावका कारण उहाँले २००१ मा फुदान विश्वविद्यालयबाट क्लिनिकल अंकोलोजीमा मास्टर्स र २०१६ मा काठमाडौं विश्वविद्यालयबाट M.Ch युरोलोजी हासिल गर्नुभयो। यो बलियो शैक्षिक आधारले उहाँलाई जटिल क्यान्सरहरूको उपचार कुशलतापूर्वक गर्न सक्षम बनाएको छ।",
             career_title: "व्यावसायिक नेतृत्व र अनुभव",
-            career_text: "उहाँको व्यावसायिक जीवन बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH) सँग गहिरो रूपमा जोडिएको छ। २००२ मा रजिस्ट्रारको रूपमा सेवा सुरु गरी उहाँ कन्सल्टेन्ट हुँदै वरिष्ठ सर्जन बन्नुभयो। उहाँले २०१८ देखि २०२० सम्म उप-निर्देशकको जिम्मेवारी सम्हाल्नुभयो। हाल उहाँ अस्पतालको <strong>सञ्चालक समितिको अध्यक्ष</strong>को रूपमा नेतृत्व गर्दै हुनुहुन्छ। साथै, उहाँले कलेज अफ मेडिकल साइन्सेजमा सहायक प्राध्यापक (२०१२-२०१६) को रूपमा पनि सेवा गर्नुभयो।",
+            career_text: "उहाँको व्यावसायिक जीवन बी.पी. कोइराला मेमोरियल क्यान्सर अस्पताल (BPKMCH) सँग गहिरो रूपमा जोडिएको छ। २००२ मा रजिस्ट्रारको रूपमा सेवा सुरु गरी उहाँ कन्सल्टेन्ट हुँदै वरिष्ठ सर्जन बन्नुभयो। उहाँले २०१८ देखि २०२० सम्म उप-निर्देशक र पछि <strong>सञ्चालक समितिको पूर्व अध्यक्ष</strong>को रूपमा महत्वपूर्ण नेतृत्वदायी जिम्मेवारी सम्हाल्नुभयो। उहाँको दूरदर्शिताले संस्थाको रणनीतिक विकासमा मद्दत पुर्‍याएको छ। साथै, उहाँले कलेज अफ मेडिकल साइन्सेजमा सहायक प्राध्यापक (२०१२-२०१६) को रूपमा पनि सेवा गर्नुभयो।",
             fel_title: "अन्तर्राष्ट्रिय तालिम र फेलोशिप",
             fel_intro: "नेपालमा विश्वस्तरीय शल्यक्रिया प्रविधिहरू भित्र्याउन डा. लामिछानेले विस्तृत अन्तर्राष्ट्रिय तालिम लिनुभएको छ:",
             fel_list_html: "<li><strong>अमेरिका (२००६):</strong> मेमोरियल स्लोन केटरिङ क्यान्सर सेन्टर (न्युयोर्क) मा प्रतिष्ठित सौदावर फेलोशिप पूरा गर्नुभयो।</li><li><strong>अमेरिका (२००३):</strong> एच. ली मोफिट क्यान्सर सेन्टर (फ्लोरिडा) मा सेन्टिनल लिम्फ नोड बायोप्सी सम्बन्धी विशेष तालिम।</li><li><strong>बेलायत (२०१०):</strong> रोयल कलेज अफ सर्जन्स अफ एडिनबर्गको सहयोगमा कोलोरेक्टल सर्जिकल अंकोलोजी फेलोशिप।</li>",
             mem_title: "सदस्यता र आबद्धता",
-            mem_text: "डा. लामिछाने चिकित्सा समुदायमा एक सक्रिय नेता हुनुहुन्छ। उहाँ नेपाल मेडिकल एसोसिएसन र सार्क फेडरेशन अफ अंकोलोजिस्टको आजीवन सदस्य हुनुहुन्छ। अन्तर्राष्ट्रिय स्तरमा, उहाँ इन्टरनेसनल युनियन अगेन्स्ट क्यान्सर (UICC) र अमेरिकन सोसाइटी अफ क्लिनिकल अंकोलोजी (ASCO) को सदस्य हुनुहुन्छ, जसले उहाँलाई क्यान्सर अनुसन्धानका नवीनतम प्रगतिहरूसँग अपडेट राख्छ।"
+            mem_text: "डा. लामिछाने चिकित्सा समुदायमा एक सक्रिय नेता हुनुहुन्छ। उहाँ नेपाल Medical एसोसिएसन र सार्क फेडरेशन अफ अंकोलोजिस्टको आजीवन सदस्य हुनुहुन्छ। अन्तर्राष्ट्रिय स्तरमा, उहाँ इन्टरनेसनल युनियन अगेन्स्ट क्यान्सर (UICC) र अमेरिकन सोसाइटी अफ क्लिनिकल अंकोलोजी (ASCO) को सदस्य हुनुहुन्छ, जसले उहाँलाई क्यान्सर अनुसन्धानका नवीनतम प्रगतिहरूसँग अपडेट राख्छ।"
         }
     };
 
@@ -120,7 +119,6 @@
         currentLang = currentLang === 'en' ? 'ne' : 'en';
         document.body.className = 'lang-' + currentLang;
         
-        // Update simple text fields
         document.querySelectorAll('[data-key]').forEach(el => {
             const key = el.getAttribute('data-key');
             if(content[currentLang][key]) {
@@ -128,7 +126,6 @@
             }
         });
 
-        // Update list HTML specifically
         document.getElementById('fel_list').innerHTML = content[currentLang]['fel_list_html'];
     }
 </script>
